# hegels-agents

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  EVALUATION_ACCUMULATION_GUIDE.md  INTEGRATION_TESTS_SUMMARY.md  PHASE_0_5_2_COMPLETION_REPORT.md  PHASE_0_5_3_COMPLETION_REPORT.md  PHASE_0_5_COMPLETION_REPORT.md  PHASE_1A_ENHANCEMENT_SUMMARY.md  README.md  T1.4_completion_report.json  T1.5_AgentFactory_Results.json  T1.6_Integration_Tests_Completion_Report.json  T1_2_DATABASE_SCHEMA_COMPLETION_REPORT.json  T1_3_PromptProfileStore_completion_report.json  T2.3_TrainingExecutor_CompletionReport.json  T2.4_Implementation_Report.json  T2.5_Implementation_Report.json  TRAINING_QUICKSTART.md  accumulate_evaluation_data.py  accumulated_evaluation_data.json  comprehensive_security_validation.py  config.yaml.template  deep_validation_report.json  demo_evaluation_framework_complete.py  end_to_end_test_report.json  enhanced_retrieval_test_report.json  evaluation_pipeline_results.json  evaluation_pipeline_summary.md  final_security_assessment.md  integration_test_results.json  phase1a_completion_report.json  phase_0_5_status.json  phase_0_completion_report.md  pyproject.toml  requirements.txt  run_evaluation_accumulation.sh  (+24 more)
.claude/: CLAUDE.md
analysis_results/: statistical_validation_report_20251203_094750.md  statistical_validation_report_20251203_095328.md  statistical_validation_report_20251203_095418.md  statistical_validation_report_20251203_095913.md  statistical_validation_report_20251203_095940.md  statistical_validation_report_20251203_110631.md  statistical_validation_results_20251203_094750.json  statistical_validation_results_20251203_095328.json  statistical_validation_results_20251203_095418.json  statistical_validation_results_20251203_095913.json  statistical_validation_results_20251203_095940.json  statistical_validation_results_20251203_110631.json  validation_config_20251203_095913.json  validation_config_20251203_110631.json
data/: .gitkeep
docs/: README.md  evaluation_pipeline_enhancement.md
documentation/: dr.md  implementation-plan.md  implementation-todo.md  training-implementation-plan.md  training-implementation-todo.md
(+149 files in other folders)
