[project]
name = "hegels-agents"
version = "0.1.0"
description = "Thesis, Antithesis, Synthesis - A hierarchical multi-agent debate system for RAG"
authors = [
    {name = "Hegels Agents Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core AI/ML dependencies
    "google-genai>=1.20.0",
    
    # Database and vector search
    "psycopg2-binary>=2.9.7",
    "sqlalchemy>=2.0.20",
    
    # Data validation and parsing
    "pydantic>=2.4.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    
    # Logging and monitoring
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    # Development tools
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    
    # Enhanced testing
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    
    # Documentation
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    
    # Development utilities
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]

research = [
    # Research and evaluation dependencies
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # NLP evaluation metrics
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    
    # Statistical analysis
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]

supabase = [
    # Supabase integration
    "supabase>=1.0.4",
    "postgrest-py>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"